--- a/style.css
+++ b/style.css
@@ -1,2 +1,11 @@
-p{color:rgb(172, 122, 47);font-size:medium;font-weight: 550;font font-family:margin: 9 ;}
-body{background-color: antiquewhite;}
+h2
+
+{
+    font-size: xx-large;}
+
+p{
+    color:rgb(0, 0, 0);font-size:larger;font-weight: 550;font font-family:margin: 9 ;}
+
+body{
+    
+    background-color: rgb(199, 168, 101);}
