--- a/style.css
+++ b/style.css
@@ -1,11 +1,31 @@
 h2
 
 {
-    font-size: xx-large;}
+    font-size: xx-large;
 
-p{
-    color:rgb(0, 0, 0);font-size:larger;font-weight: 550;font font-family:margin: 9 ;}
+}
 
-body{
+p
+
+{
+    color:rgb(0, 0, 0);
+    font-size:larger;
+    font-weight: 550;
+    margin: 9 ;
+
+}
+
+body
+
+{
     
-    background-color: rgb(199, 168, 101);}
+    background-color: rgb(199, 168, 101);
+
+}
+
+div
+
+{
+    margin: auto;
+    max-width: 800px;
+}
